// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HasMany add should add only a relation of instances to instance 1`] = `2`;

exports[`HasMany count should count all tasks to instance 1`] = `2`;

exports[`HasMany count should count all tasks with property done equals true to instance 1`] = `1`;

exports[`HasMany create should create a instances of tasks and relate them to person instance 1`] = `
Array [
  ModelInstance {
    "props": Object {
      "title": "Buy milk",
    },
  },
  ModelInstance {
    "props": Object {
      "done": false,
      "title": "Buy beer",
    },
  },
]
`;

exports[`HasMany get should find all tasks starting with character 'B' and are done 1`] = `
Array [
  ModelInstance {
    "props": Object {
      "done": true,
      "guid": "9f6504b5-dabd-4f11-bf97-f237be32b9e6",
      "title": "Buy beer",
    },
  },
]
`;

exports[`HasMany get should find all tasks to instance 1`] = `
Array [
  ModelInstance {
    "props": Object {
      "done": true,
      "title": "Buy beer",
    },
  },
  ModelInstance {
    "props": Object {
      "title": "Buy milk",
    },
  },
]
`;

exports[`HasMany get should find all tasks to instance 2`] = `
Array [
  ModelInstance {
    "props": Object {
      "done": true,
      "title": "Buy beer",
    },
  },
  ModelInstance {
    "props": Object {
      "title": "Buy milk",
    },
  },
]
`;

exports[`HasMany get should find all tasks to instance where task property done equals true 1`] = `
Array [
  ModelInstance {
    "props": Object {
      "done": true,
      "title": "Buy beer",
    },
  },
]
`;

exports[`HasMany get should find nothing 1`] = `Array []`;

exports[`HasMany update should set tasks to done 1`] = `
Array [
  ModelInstance {
    "props": Object {
      "done": true,
      "title": "Buy milk",
    },
  },
]
`;
